# cuda-image-enhancement

./: CMakeLists.txt  README.md  dependencies.h  gamma.cu  gamma.cuh  gaussian.cu  gaussian.cuh  histogram.cu  histogram.cuh  main.cu  sobel.cu  sobel.cuh
